practice many Tags

--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
+<!-- HTML 5로 해석해주세요  -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="author" content="EinsVision">
+  <meta name="descripton" contents="This is practice for HTML.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title> 
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="./favicon-96x96.png">
+  <title>EinsVision</title> 
+  <style>
+    img{
+      width: 200px;
+    }
+  </style>
+  <script src="action.js"></script>
 </head>
 <body>
-  <img src="./IMG_0005.JPG" alt="Boyoung" />
+  <img src="./IMG_0005.JPG" alt="Boyoung"/>
   <section class="fruits">
     <h1>Fruits</h1>
     <ul>
-      <li>Apple</li>
+      <li class="apple">Apple</li>
       <li>Strawberry</li>
       <li>Banana</li>
       <li>Orange</li>
     </ul>
   </section>
+  
 </body>
 </html>
